# swagger.json
@@ -5,10 +5,10 @@
     "description": "Babyshop API",
     "version": "1.0.0"
   },
-  "host": "bobyshop2.onrender.com",
+  "host": "localhost:8080",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
     "/api-docs": {
@@ -45,64 +45,16 @@
             "schema": {
               "type": "object",
               "properties": {
-                "listing_url": {
-                  "example": "any"
-                },
                 "name": {
                   "example": "any"
                 },
                 "description": {
                   "example": "any"
                 },
-                "property_type": {
-                  "example": "any"
-                },
-                "room_type": {
-                  "example": "any"
-                },
-                "bed_type": {
-                  "example": "any"
-                },
-                "cancellation_policy": {
-                  "example": "any"
-                },
-                "amenities": {
-                  "example": "any"
-                },
                 "price": {
                   "example": "any"
                 },
-                "weekly_price": {
-                  "example": "any"
-                },
-                "monthly_price": {
-                  "example": "any"
-                },
-                "guests_included": {
-                  "example": "any"
-                },
                 "images": {
-                  "example": "any"
-                },
-                "transit": {
-                  "example": "any"
-                },
-                "interaction": {
-                  "example": "any"
-                },
-                "house_rules": {
-                  "example": "any"
-                },
-                "minimum_nights": {
-                  "example": "any"
-                },
-                "maximum_nights": {
-                  "example": "any"
-                },
-                "cleaning_fee": {
-                  "example": "any"
-                },
-                "extra_people": {
                   "example": "any"
                 }
               }
@@ -163,64 +115,16 @@
             "schema": {
               "type": "object",
               "properties": {
-                "listing_url": {
-                  "example": "any"
-                },
                 "name": {
                   "example": "any"
                 },
                 "description": {
                   "example": "any"
                 },
-                "property_type": {
-                  "example": "any"
-                },
-                "room_type": {
-                  "example": "any"
-                },
-                "bed_type": {
-                  "example": "any"
-                },
-                "cancellation_policy": {
-                  "example": "any"
-                },
-                "amenities": {
-                  "example": "any"
-                },
                 "price": {
                   "example": "any"
                 },
-                "guests_included": {
-                  "example": "any"
-                },
                 "images": {
-                  "example": "any"
-                },
-                "transit": {
-                  "example": "any"
-                },
-                "interaction": {
-                  "example": "any"
-                },
-                "house_rules": {
-                  "example": "any"
-                },
-                "minimum_nights": {
-                  "example": "any"
-                },
-                "maximum_nights": {
-                  "example": "any"
-                },
-                "weekly_price": {
-                  "example": "any"
-                },
-                "monthly_price": {
-                  "example": "any"
-                },
-                "cleaning_fee": {
-                  "example": "any"
-                },
-                "extra_people": {
                   "example": "any"
                 }
               }
@@ -286,7 +190,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "username": {
+                "userName": {
                   "example": "any"
                 },
                 "displayName": {
@@ -362,7 +266,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "username": {
+                "userName": {
                   "example": "any"
                 },
                 "displayName": {
@@ -378,6 +282,290 @@
                   "example": "any"
                 },
                 "email": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/review/": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "userName": {
+                  "example": "any"
+                },
+                "productName": {
+                  "example": "any"
+                },
+                "review": {
+                  "example": "any"
+                },
+                "rate": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/review/{id}": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "userName": {
+                  "example": "any"
+                },
+                "productName": {
+                  "example": "any"
+                },
+                "review": {
+                  "example": "any"
+                },
+                "rate": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/cart/": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "orderItem": {
+                  "example": "any"
+                },
+                "productDetail": {
+                  "example": "any"
+                },
+                "dateAdded": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/cart/{id}": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "orderItem": {
+                  "example": "any"
+                },
+                "productDetail": {
+                  "example": "any"
+                },
+                "dateAdded": {
                   "example": "any"
                 }
               }
